compilador/src/main/antlr4/epp/.antlr/EPPParser.java
// Generated from /Users/adrianmoralesrodriguez/Documents/Universidad/Procesadores del Lenguaje/compiladores-pl3/compilador/src/main/antlr4/epp/EPPParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class EPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASIGNAR=1, MOSTRAR=2, LEER=3, MIENTRAS=4, PARA=5, DESDE=6, HASTA=7, PASO=8, 
		SI=9, NO=10, TERMINAR=11, FLECHA=12, PARENIZQ=13, PARENDER=14, ASIGNACION=15, 
		CONDICION=16, FINLINEA=17, Y_LOGICO=18, O_LOGICO=19, NO_LOGICO=20, MAS=21, 
		MENOS=22, POR=23, DIV=24, MOD=25, MAYOR=26, MENOR=27, IGUAL=28, DIFERENTE=29, 
		MAYORIGUAL=30, MENORIGUAL=31, NUM=32, STRING=33, VERDADERO=34, FALSO=35, 
		VARIABLE=36, COMENTARIO=37, WS=38;
	public static final int
		RULE_programa = 0, RULE_instruccion = 1, RULE_asignacion = 2, RULE_asignacionSimple = 3, 
		RULE_mostrar = 4, RULE_leer = 5, RULE_mientras = 6, RULE_para = 7, RULE_condicional = 8, 
		RULE_bloque = 9, RULE_comentario = 10, RULE_expresionBooleana = 11, RULE_expresionComparable = 12, 
		RULE_expresion = 13, RULE_expresionAritmetica = 14, RULE_expresionAritmeticaPrimaria = 15, 
		RULE_expresionPrimaria = 16, RULE_operadorComparacion = 17, RULE_operadorAditivo = 18, 
		RULE_operadorMultiplicativo = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instruccion", "asignacion", "asignacionSimple", "mostrar", 
			"leer", "mientras", "para", "condicional", "bloque", "comentario", "expresionBooleana", 
			"expresionComparable", "expresion", "expresionAritmetica", "expresionAritmeticaPrimaria", 
			"expresionPrimaria", "operadorComparacion", "operadorAditivo", "operadorMultiplicativo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'asignar'", "'mostrar'", "'leer'", "'mientras'", "'para'", "'desde'", 
			"'hasta'", "'paso'", "'si'", "'no'", "'terminar'", "'->'", "'('", "')'", 
			"'='", "'???'", "';P'", "'AND'", "'OR'", "'NOT'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'>'", "'<'", "'=='", "'!='", "'>='", "'<='", null, null, 
			"'verdadero'", "'falso'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASIGNAR", "MOSTRAR", "LEER", "MIENTRAS", "PARA", "DESDE", "HASTA", 
			"PASO", "SI", "NO", "TERMINAR", "FLECHA", "PARENIZQ", "PARENDER", "ASIGNACION", 
			"CONDICION", "FINLINEA", "Y_LOGICO", "O_LOGICO", "NO_LOGICO", "MAS", 
			"MENOS", "POR", "DIV", "MOD", "MAYOR", "MENOR", "IGUAL", "DIFERENTE", 
			"MAYORIGUAL", "MENORIGUAL", "NUM", "STRING", "VERDADERO", "FALSO", "VARIABLE", 
			"COMENTARIO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EPPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(EPPParser.EOF, 0); }
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 270588190782L) != 0)) {
				{
				setState(42);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASIGNAR:
				case MOSTRAR:
				case LEER:
				case MIENTRAS:
				case PARA:
				case PARENIZQ:
				case NO_LOGICO:
				case MENOS:
				case NUM:
				case STRING:
				case VERDADERO:
				case FALSO:
				case VARIABLE:
					{
					setState(40);
					instruccion();
					}
					break;
				case COMENTARIO:
					{
					setState(41);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public AsignacionSimpleContext asignacionSimple() {
			return getRuleContext(AsignacionSimpleContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public LeerContext leer() {
			return getRuleContext(LeerContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccion);
		try {
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				asignacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				asignacionSimple();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				mostrar();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				condicional();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				leer();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(54);
				mientras();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(55);
				para();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ASIGNAR() { return getToken(EPPParser.ASIGNAR, 0); }
		public TerminalNode VARIABLE() { return getToken(EPPParser.VARIABLE, 0); }
		public TerminalNode ASIGNACION() { return getToken(EPPParser.ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(ASIGNAR);
			setState(59);
			match(VARIABLE);
			setState(60);
			match(ASIGNACION);
			setState(61);
			expresion(0);
			setState(62);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionSimpleContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(EPPParser.VARIABLE, 0); }
		public TerminalNode ASIGNACION() { return getToken(EPPParser.ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public AsignacionSimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacionSimple; }
	}

	public final AsignacionSimpleContext asignacionSimple() throws RecognitionException {
		AsignacionSimpleContext _localctx = new AsignacionSimpleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacionSimple);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(VARIABLE);
			setState(65);
			match(ASIGNACION);
			setState(66);
			expresion(0);
			setState(67);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MostrarContext extends ParserRuleContext {
		public TerminalNode MOSTRAR() { return getToken(EPPParser.MOSTRAR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public MostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mostrar; }
	}

	public final MostrarContext mostrar() throws RecognitionException {
		MostrarContext _localctx = new MostrarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mostrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(MOSTRAR);
			setState(70);
			expresion(0);
			setState(71);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeerContext extends ParserRuleContext {
		public TerminalNode LEER() { return getToken(EPPParser.LEER, 0); }
		public TerminalNode VARIABLE() { return getToken(EPPParser.VARIABLE, 0); }
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public LeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leer; }
	}

	public final LeerContext leer() throws RecognitionException {
		LeerContext _localctx = new LeerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(LEER);
			setState(74);
			match(VARIABLE);
			setState(75);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(EPPParser.MIENTRAS, 0); }
		public TerminalNode PARENIZQ() { return getToken(EPPParser.PARENIZQ, 0); }
		public ExpresionBooleanaContext expresionBooleana() {
			return getRuleContext(ExpresionBooleanaContext.class,0);
		}
		public TerminalNode PARENDER() { return getToken(EPPParser.PARENDER, 0); }
		public TerminalNode FLECHA() { return getToken(EPPParser.FLECHA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EPPParser.TERMINAR, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(MIENTRAS);
			setState(78);
			match(PARENIZQ);
			setState(79);
			expresionBooleana(0);
			setState(80);
			match(PARENDER);
			setState(81);
			match(FLECHA);
			setState(82);
			bloque();
			setState(83);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParaContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(EPPParser.PARA, 0); }
		public TerminalNode VARIABLE() { return getToken(EPPParser.VARIABLE, 0); }
		public TerminalNode DESDE() { return getToken(EPPParser.DESDE, 0); }
		public List<ExpresionAritmeticaContext> expresionAritmetica() {
			return getRuleContexts(ExpresionAritmeticaContext.class);
		}
		public ExpresionAritmeticaContext expresionAritmetica(int i) {
			return getRuleContext(ExpresionAritmeticaContext.class,i);
		}
		public TerminalNode HASTA() { return getToken(EPPParser.HASTA, 0); }
		public TerminalNode FLECHA() { return getToken(EPPParser.FLECHA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EPPParser.TERMINAR, 0); }
		public TerminalNode PASO() { return getToken(EPPParser.PASO, 0); }
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_para);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(PARA);
			setState(86);
			match(VARIABLE);
			setState(87);
			match(DESDE);
			setState(88);
			expresionAritmetica(0);
			setState(89);
			match(HASTA);
			setState(90);
			expresionAritmetica(0);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PASO) {
				{
				setState(91);
				match(PASO);
				setState(92);
				expresionAritmetica(0);
				}
			}

			setState(95);
			match(FLECHA);
			setState(96);
			bloque();
			setState(97);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public ExpresionBooleanaContext expresionBooleana() {
			return getRuleContext(ExpresionBooleanaContext.class,0);
		}
		public TerminalNode CONDICION() { return getToken(EPPParser.CONDICION, 0); }
		public TerminalNode SI() { return getToken(EPPParser.SI, 0); }
		public List<TerminalNode> FLECHA() { return getTokens(EPPParser.FLECHA); }
		public TerminalNode FLECHA(int i) {
			return getToken(EPPParser.FLECHA, i);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public TerminalNode TERMINAR() { return getToken(EPPParser.TERMINAR, 0); }
		public TerminalNode NO() { return getToken(EPPParser.NO, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			expresionBooleana(0);
			setState(100);
			match(CONDICION);
			setState(101);
			match(SI);
			setState(102);
			match(FLECHA);
			setState(103);
			bloque();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NO) {
				{
				setState(104);
				match(NO);
				setState(105);
				match(FLECHA);
				setState(106);
				bloque();
				}
			}

			setState(109);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 270588190782L) != 0)) {
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASIGNAR:
				case MOSTRAR:
				case LEER:
				case MIENTRAS:
				case PARA:
				case PARENIZQ:
				case NO_LOGICO:
				case MENOS:
				case NUM:
				case STRING:
				case VERDADERO:
				case FALSO:
				case VARIABLE:
					{
					setState(111);
					instruccion();
					}
					break;
				case COMENTARIO:
					{
					setState(112);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode COMENTARIO() { return getToken(EPPParser.COMENTARIO, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comentario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(COMENTARIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
